<?xml version="1.0"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".IngresarNotaActivity">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ID_RECURSO" />
            <EditText
                android:id="@+id/editText_notaCarnet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10">
                <requestFocus />
            </EditText>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ID_ACTIVIDAD" />
            <EditText
                android:id="@+id/editText_notaMateria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />
        </TableRow>


</TableLayout>
<TextView
android:id="@+id/textView"
android:layout_width="330dp"
android:layout_height="wrap_content"
android:text="@string/Texto1"
android:textAlignment="center"
android:textIsSelectable="false"
android:textSize="12dp"
android:textStyle="bold" />
<LinearLayout
android:layout_width="294dp"
android:layout_height="wrap_content"
android:orientation="horizontal">
<Button
    android:id="@+id/button1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="insertarNota"
    android:text="@string/Boton1" />
<Button
    android:id="@+id/button2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="insertarNota"
    android:text="@string/Boton2" />
<Button
    android:id="@+id/button3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="insertarNota"
    android:text="@string/Boton3" />
</LinearLayout>
<TextView
android:id="@+id/textView2"
android:layout_width="330dp"
android:layout_height="28dp"
android:text="@string/Texto2"
android:textAlignment="center"
android:textSize="12dp"
android:textStyle="bold" />
<LinearLayout
android:layout_width="294dp"
android:layout_height="wrap_content"
android:orientation="horizontal">
<Button
    android:id="@+id/button4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="insertarNota"
    android:text="@string/Boton4" />
<Button
    android:id="@+id/button5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
android:onClick="insertarNota"
android:text="@string/Boton5" />
<Button
    android:id="@+id/button6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="insertarNota"
    android:text="@string/Boton6" />
</LinearLayout>
    </LinearLayout>
