<?xml version="1.0"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/IdReserva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ID_RESERVA"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
            android:id="@+id/editIdReserva"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:ems="10">
            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/IdGrupo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ID_GRUPO"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
            android:id="@+id/editIdGrupo"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:ems="10">
            <requestFocus />
        </EditText>
   </LinearLayout>

        <Button
            android:id="@+id/button0"
            android:text="@string/valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="limpiarTextoReserva" />


    <LinearLayout
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="consultarReservaPHP"
            android:text="@string/ConsularReverva" />

    </LinearLayout>

    <TextView
        android:text="@string/ID_RECURSO"
        android:id="@+id/textViewRecurso"
        android:layout_width="330dp"
        android:layout_height="47dp"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textSize="16dp"
        android:textStyle="bold" />

</LinearLayout>